<resources>
    <string name="app_name">Learn And Achieve</string>
    <string name="ok">Ok</string>

    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="empty_error">This field is required.</string>
    <string name="passwordStrong">The password must contain both lower &amp; upper case characters,one number,one special symbol &amp; at least 8 characters long.</string>
    <string name="passwordLength">The password must contain at least 6 characters.</string>
    <string name="enter_ten_digits_number">enter_ten_digits_number</string>
    <string name="valid_number">valid_number</string>
    <string name="password_not_match">password not match</string>
    <string name="amount_valid">amount valid</string>
    <string name="invalid_email">Please enter valid email id</string>
    <string name="aadhaar_valid">aadhaar valid</string>
    <string name="pan_card_valid">pan card valid</string>
    <string name="ifsc_valid">ifsc_valid</string>
    <string name="enter_a_valid_number">Enter a valid number</string>
    <string name="gstin_number_valid">Please enter valid GSTIN number!!</string>
    <string name="account_valid">Please enter valid Account Number!!</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="image">image</string>
    <string name="username_or_email">UserName or Email\n</string>
    <string name="field_empty">Field can\'t be empty!</string>
    <string name="password_">Password*</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>
    <string name="enter_email_or_phone_number">Enter Email or Phone Number</string>
    <string name="user_name">User Name</string>
    <string name="something">SomeThing\n</string>
    <string name="change_password">Change Password</string>
    <string name="setting">Setting</string>
    <string name="log_out">LogOut</string>
    <string name="are_you_sure_want_to_exit">Are You Sure Want To Exit</string>
    <string name="cancel">Cancel</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="save">Save</string>
    <string name="please_check_your_connection">Please Check Your Connection</string>
    <string name="are_you_sure_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="camera">Camera</string>
    <string name="we_sent_you_a_code_to_n_your_email">We Sent You A Code On Your Email</string>
    <string name="enter_it_below_to_verify">Enter It Below To Verify</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="the_server_is_not_responding_sorry_for_your_inconvenience">the_server_is_not_responding_sorry_for_your_inconvenience</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="default_web_client_id">798378067012-re9400j0npmr79iur4ho85d2dhvgp59l.apps.googleusercontent.com</string>
    <string name="send">Send</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="english">English</string>
    <string name="invalid_pin_length_error">PIN must be 6 digits</string>
    <string name="day_time_picker_format_day">%d</string>
    <string name="submit">Submit</string>
    <string name="blogs">Blogs</string>
    <string name="our_services">Our Services</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="frequently_asked_questions">Frequently Asked questions</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="todo">Your placeholder text here</string>
    <string name="invalid_pincode_error">Please enter a valid 6-digit PIN code </string>
    <string name="profile_details">Profile Details</string>

    <string name="change_profile">Change Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="change_your_profile_photo">Change your profile photo</string>
    <string name="remove_your_profile_photo">Remove your profile photo</string>
    <string name="begin_your_journey_for_the_bharat_sat_exam_with_pradnya_learnitics_mock_tests"><![CDATA[Begin your journey for the Bharat Sat exam with Pradnya Learnitics & mock tests.]]></string>
    <string name="pick_photo_from_gallery">Pick photo from gallery</string>
    <string name="gallery">Gallery</string>
    <string name="pick_photo_from_camera">Pick photo from camera</string>
    <string name="delete_account">Delete Account</string>
    <string name="bharat_sat">Bharat SAT</string>
    <string name="introducing_bharat_sat_unlocking_potential_through_education">Introducing Bharat SAT: Unlocking Potential through Education</string>
    <string name="welcome_to_bharat_sat_a_flagship_initiative_of_the_learn_and_achieve_edutech_project_aimed_at_transforming_the_educational_landscape_of_india_bharat_sat_is_an_all_india_level_examination_specially_designed_for_students_from_5th_to_10th_grade_this_initiative_stands_out_for_its_unique_approach_combining_competition_and_diagnostic_evaluation_to_empower_students_on_their_educational_journey">Welcome to Bharat SAT, a flagship initiative of the \'Learn and Achieve\' Edutech project aimed at transforming the educational landscape of India. Bharat SAT is an all-India-level examination specially designed for students from 5th to 10th grade. This initiative stands out for its unique approach, combining competition and diagnostic evaluation to empower students on their educational journey.</string>
    <string name="skill_enhancement_participating_in_bharat_sat_encourages_students_to_develop_a_broad_spectrum_of_skills_from_problem_solving_to_time_management_fostering_their_holistic_growth">Skill Enhancement: Participating in BHARAT SAT encourages students to develop a broad spectrum of skills, from problem-solving to time management, fostering their holistic growth.</string>
    <string name="healthy_competition_healthy_competition_is_the_cornerstone_of_personal_development_bharat_sat_instills_a_sense_of_competitiveness_in_students_motivating_them_to_strive_for_excellence">Healthy Competition: Healthy competition is the cornerstone of personal development. BHARAT SAT instills a sense of competitiveness in students, motivating them to strive for excellence.</string>
    <string name="scholarships_with_monthly_scholarships_awarded_to_the_top_performers_at_various_levels_bharat_sat_eases_the_financial_burden_on_families_making_quality_education_more_accessible">Scholarships: With monthly scholarships awarded to the top performers at various levels, BHARAT SAT eases the financial burden on families, making quality education more accessible.</string>
    <string name="identify_potential_bharat_sat_s_diagnostic_aspect_helps_students_and_educators_identify_their_strengths_and_weaknesses_enabling_them_to_tailor_their_educational_paths_for_optimal_growth">Identify Potential: BHARAT SAT\'s diagnostic aspect helps students and educators identify their strengths and weaknesses, enabling them to tailor their educational paths for optimal growth.</string>
    <string name="national_recognition_achieving_success_in_bharat_sat_is_a_badge_of_honor_signifying_excellence_at_a_national_level_which_can_open_doors_to_a_world_of_opportunities">National Recognition: Achieving success in BHARAT SAT is a badge of honor, signifying excellence at a national level, which can open doors to a world of opportunities.</string>
    <string name="exam_fee">Exam Fee</string>
    <string name="exam_fees">Exam Fees</string>
    <string name="standard_5">Standard 5</string>
    <string name="_650">₹ 650</string>
    <string name="standard_10">Standard 10</string>
    <string name="standard_7">Standard 7</string>
    <string name="_850">₹ 850</string>
    <string name="join_us_in_this_remarkable_journey_of_knowledge_competition_and_self_improvement_with_bharat_sat_together_we_are_shaping_a_brighter_future_for_india_s_young_minds_discover_your_potential_compete_and_succeed_with_bharat_sat">Join us in this remarkable journey of knowledge, competition, and self-improvement with Bharat SAT. Together, we are shaping a brighter future for India\'s young minds. Discover your potential, compete, and succeed with Bharat SAT.</string>
    <string name="bellicon">bellIcon</string>
    <string name="_2">2</string>
    <string name="view_all">View All</string>

    <!-- Price format -->
    <string name="price_format">₹ %d</string>
    <!-- Discount format -->
    <string name="discount_format">- ₹ %d</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="packages">Packages</string>
    <string name="logout">Logout</string>
    <string name="pradnya_learnitics">Pradnya Learnitics</string>


</resources>