<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

>

    <RelativeLayout
        android:id="@+id/rlProfileOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_bg"
        android:padding="20dp">

        <!-- Indicator -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvIndicator"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="6dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardCornerRadius="@dimen/_6sdp"
            app:strokeColor="@color/white" />

        <!-- Change Profile Option -->
        <RelativeLayout
            android:id="@+id/rlChangeProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mcvIndicator"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvChangeProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/change_profile"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroy_bold"

                android:textSize="14sp"
        />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvChangeProfile"
                android:text="@string/change_your_profile_photo"
                android:textColor="@color/primaryColor"
                android:textSize="12sp"
                android:paddingVertical="@dimen/_2sdp"
                android:fontFamily="@font/gilroy_regular" />
        </RelativeLayout>

        <!-- Delete Profile Option -->
        <RelativeLayout
            android:id="@+id/rlDeleteProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlChangeProfile"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvDeleteProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/delete_profile"
                android:textColor="#0D1B1D"
                android:textSize="14sp"
                android:fontFamily="@font/gilroy_bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDeleteProfile"
                android:text="@string/remove_your_profile_photo"
                android:textColor="@color/primaryColor"
                android:textSize="12sp"
                android:paddingVertical="@dimen/_2sdp"

                android:fontFamily="@font/gilroy_regular" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
