<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:strokeColor="@color/white"
    app:cardCornerRadius="16dp"

    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rlRelative3"
        android:padding="20dp"
        android:background="@drawable/bottom_sheet_bg"
        android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvIndicator"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="6dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardCornerRadius="@dimen/_6sdp"
            app:strokeColor="@color/white"/>

<!--
        app:cardBackgroundColor="#465D61"
-->



        <RelativeLayout
            android:id="@+id/rlGallery"
            android:layout_marginTop="20dp"
            android:layout_below="@id/mcvIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivGallery"
                android:layout_width="30dp"
                android:src="@drawable/ic_gallary"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_height="30dp"/>


            <TextView
                android:id="@+id/tvGallery"
                android:layout_width="match_parent"
                android:text="@string/gallery"
                android:textColor="@color/black"
                android:layout_toEndOf="@+id/ivGallery"
                android:textSize="14sp"
                android:fontFamily="@font/gilroy_bold"
                android:layout_marginTop="3dp"
                android:layout_marginStart="7dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_below="@id/tvGallery"
                android:textSize="12sp"
                android:layout_toEndOf="@+id/ivGallery"

                android:textColor="@color/primaryColor"
                android:fontFamily="@font/gilroy_regular"
                android:layout_marginStart="7dp"
                android:text="@string/pick_photo_from_gallery"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rlRelative5"
            android:layout_marginTop="10dp"
            android:layout_below="@id/rlGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivCamera"
                android:layout_width="30dp"
                android:src="@drawable/ic_camera"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_height="30dp"/>


            <TextView
                android:id="@+id/tvCamera"
                android:layout_width="match_parent"
                android:text="Camera"
                android:textColor="#0D1B1D"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/ivCamera"
                android:fontFamily="@font/gilroy_bold"
                android:layout_marginTop="3dp"
                android:layout_marginStart="7dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_below="@id/tvCamera"
                android:textSize="12sp"
                android:textColor="@color/primaryColor"
                android:layout_toRightOf="@+id/ivCamera"

                android:fontFamily="@font/gilroy_regular"
                android:layout_marginStart="7dp"
                android:text="@string/pick_photo_from_camera"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>