<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".main_package.ui.fragment.ChangePasswordFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/gilroy_bold"
        android:text="Change Password"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etCurrentPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableEnd="@drawable/ic_hide_eye"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/gilroy_regular"
        android:hint="Current Password"
        android:paddingVertical="@dimen/_15sdp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"

        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2ssp"
        >

        <TextView
            android:id="@+id/tvCurrentPassError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_regular"
            android:includeFontPadding="false"
            android:text="@string/empty_error"
            android:textColor="@color/red"
            android:textSize="10sp"
            android:visibility="gone" />
    </LinearLayout>


    <EditText
        android:id="@+id/etNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableEnd="@drawable/ic_hide_eye"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/gilroy_regular"
        android:hint="@string/new_password"
        android:importantForAutofill="no"
        android:paddingVertical="@dimen/_15sdp"
        android:singleLine="true"

        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        tools:ignore="TextFields" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2ssp"
        >

        <TextView
            android:id="@+id/tvNewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/empty_error"
            android:textColor="@color/red"
            android:textSize="10sp"
            android:visibility="gone" />
    </LinearLayout>


    <EditText
        android:id="@+id/etConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableEnd="@drawable/ic_hide_eye"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/gilroy_regular"
        android:hint="@string/confirm_new_password"
        android:importantForAutofill="no"
        android:paddingVertical="@dimen/_15sdp"
        android:singleLine="true"

        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        tools:ignore="TextFields" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2ssp"
        >

        <TextView
            android:id="@+id/tvConfirmPassError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/empty_error"
            android:textColor="@color/red"
            android:textSize="10sp"
            android:visibility="gone" />
    </LinearLayout>


    <com.anurupjaiswal.learnandachieve.basic.utilitytools.loadingButton.LoadingButton
        android:id="@+id/lbChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/primaryColor"
        android:drawableTint="@color/white"
        android:fontFamily="@font/gilroy_semibold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingVertical="@dimen/_7sdp"
        android:text="Change Password"
        android:textColor="@color/background"
        android:textSize="16sp"
        app:disableClickOnLoading="true"
        app:drawableStartHeight="@dimen/_14sdp"
        app:drawableStartWidth="@dimen/_14sdp"
        app:enableCenterDrawables="true"
        app:enableRestore="true"
        app:enableShrink="true"
        app:loadingDrawableColor="@color/white"
        app:loadingDrawablePosition="End"
        app:radius="@dimen/_7sdp"
        app:shrinkDuration="100"
        app:shrinkShape="Oval" />
</LinearLayout>